# eggplant

./: .gitignore  Cargo.toml  LICENSE  README.md
analysis/: analysis.ipynb
docs/: karlburtram-report.tex  kburtram-presentation.pptx  report-drawings.vsdx
input/: expression1.json  expression2.json  expression3.json  expression4.json  expression5.json  expression6.json  expression7.json
src/: main.rs
