[package]
name = "eggplant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# need to link to local egg with EClass nodes field public
# egg = { path = "../egg" }
egg = "0.8.1"
ordered-float = "1.1.1"
fxhash = "0.2"
env_logger = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
